@@ -3,12 +3,12 @@ package Crypt::CBC;
 use strict;
 use Carp 'croak','carp';
 use Crypt::CBC::PBKDF;
+use Crypt::URandom ();
 use bytes;
 use vars qw($VERSION);
 no warnings 'uninitialized';
 $VERSION = '3.05';
 
-use constant RANDOM_DEVICE      => '/dev/urandom';
 use constant DEFAULT_PBKDF      => 'opensslv1';
 use constant DEFAULT_ITER       => 10_000;  # same as OpenSSL default
 
@@ -767,14 +767,7 @@ sub random_bytes {
 sub _get_random_bytes {
   my $self   = shift;
   my $length = shift;
-  my $result;
-
-  if (-r RANDOM_DEVICE && open(F,RANDOM_DEVICE)) {
-    read(F,$result,$length);
-    close F;
-  } else {
-    $result = pack("C*",map {rand(256)} 1..$length);
-  }
+  my $result = Crypt::URandom::urandom($length);
   # Clear taint and check length
   $result =~ /^(.+)$/s;
   length($1) == $length or croak "Invalid length while gathering $length random bytes";
@@ -1430,10 +1423,9 @@ B<literal_key> is false.
 
 =head2 $data = random_bytes($numbytes)
 
-Return $numbytes worth of random data. On systems that support the
-"/dev/urandom" device file, this data will be read from the
-device. Otherwise, it will be generated by repeated calls to the Perl
-rand() function.
+Return $numbytes worth of random data, using L<Crypt::URandom>, which
+will read data from the system's source of random bytes, such as
+F</dev/urandom>.
 
 =head2 cipher(), pbkdf(), padding(), keysize(), blocksize(), chain_mode() 
 
